--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,25 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.mvc.format.date=dd/MM/yyyy
 spring.jackson.stream-write-constraints.max-nesting-depth=2000
+
+
+
+logging.file.name=logs/gestion-ecole.log
+
+logging.level.root=INFO
+
+logging.level.ma.devops.gestionecole=DEBUG
+
+logging.file.max-size=10MB
+logging.file.total-size-cap=100MB
+
+
+server.tomcat.accesslog.enabled=true
+server.tomcat.accesslog.directory=logs
+server.tomcat.accesslog.pattern=common
+server.tomcat.accesslog.prefix=access_log
+server.tomcat.accesslog.suffix=.log
+server.tomcat.basedir=.
